kuber/dotnet-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: school-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: school-api
  template:
    metadata:
      labels:
        app: school-api
    spec:
      containers:
      - name: school-api
        image: jhncde/school-api:latest
        ports:
        - containerPort: 8080
          name: api
---
apiVersion: v1
kind: Service
metadata:
  name: school-api
spec: 
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: school-api
