kuber/mykube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysqlapi
spec:
  selector:
    matchLabels:
      app: mysqlapi
  replicas: 1
  template:
    metadata:
      labels:
        app: mysqlapi
    spec:
      containers:
        - name: mysqlapi
          image: jhncde/school-api:2.0.1
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mysqlapi
spec:
  selector:
    app: mysqlapi
  ports:
  - port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
spec:
  selector:
    matchLabels:
      app: myapp-pod
  replicas: 1
  template:
    metadata:
      labels:
        app: myapp-pod
    spec:
      containers:
        - name: myapp-container
          image: jhncde/school-app:2.0.0
          ports:
            - containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  selector:
    app: myapp-pod
  ports:
  - port: 80
