kuber/mysql-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-db
  labels:
    app: school-system
    tier: school-db
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: school-db
  template:
    metadata:
      labels:
        app: school-system
        tier: school-db
    spec:
      containers:
      - image: mysql:8
        name: mysql-db
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-persisitent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persisitent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-db
  labels:
    app: school-system
    tier: school-db
spec:
  type: LoadBalancer
  selector:
    tier: school-db
  ports:
    - port: 3306
      protocol: TCP
      targetPort: 3306
